--- a/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
+++ b/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
@@ -394,14 +394,14 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="20"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="history" id="vGr-o3-yOJ">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="history" id="vGr-o3-yOJ" customClass="ComplicationHistoryCollectionViewCell" customModule="complicationsapp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="120" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="120" height="40"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DateTime" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wO7-zz-qEi">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DateTime" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="wO7-zz-qEi">
                                             <rect key="frame" x="0.0" y="0.0" width="120" height="40"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -418,6 +418,9 @@
                                     <constraint firstAttribute="bottom" secondItem="wO7-zz-qEi" secondAttribute="bottom" id="xDj-58-yYf"/>
                                     <constraint firstItem="wO7-zz-qEi" firstAttribute="top" secondItem="vGr-o3-yOJ" secondAttribute="top" id="xvM-zp-oT4"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="timeLabel" destination="wO7-zz-qEi" id="8WF-zB-qOP"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
