--- a/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
+++ b/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
@@ -269,6 +269,89 @@
             </objects>
             <point key="canvasLocation" x="183" y="409"/>
         </scene>
+        <!--Select date of complication-->
+        <scene sceneID="zIB-jB-ed7">
+            <objects>
+                <viewController id="GaH-YH-eTw" customClass="CalendarViewController" customModule="complicationsapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dGX-6b-aKy"/>
+                        <viewControllerLayoutGuide type="bottom" id="rpO-du-g4k"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="I9l-Hu-B3H">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hev-ds-7hG" customClass="CVCalendarMenuView" customModule="CVCalendar">
+                                <rect key="frame" x="0.0" y="114" width="600" height="40"/>
+                                <color key="backgroundColor" white="0.98054584703947367" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="750" constant="40" id="rxU-DX-4GU"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GJk-Vb-2i3" customClass="CVCalendarView" customModule="CVCalendar">
+                                <rect key="frame" x="0.0" y="164" width="600" height="336"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="340" id="w48-F1-hUe"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="w48-F1-hUe"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Month, Year" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8h7-cz-kee">
+                                <rect key="frame" x="0.0" y="74" width="600" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="A0V-Bu-kuM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8h7-cz-kee" firstAttribute="top" secondItem="dGX-6b-aKy" secondAttribute="bottom" constant="10" id="7p6-NP-6pU"/>
+                            <constraint firstItem="rpO-du-g4k" firstAttribute="top" secondItem="GJk-Vb-2i3" secondAttribute="bottom" priority="750" constant="100" id="AfE-UI-8sr"/>
+                            <constraint firstItem="GJk-Vb-2i3" firstAttribute="leading" secondItem="I9l-Hu-B3H" secondAttribute="leading" id="G2g-0I-od2"/>
+                            <constraint firstItem="GJk-Vb-2i3" firstAttribute="centerX" secondItem="I9l-Hu-B3H" secondAttribute="centerX" id="HJS-Ye-P2A"/>
+                            <constraint firstItem="Hev-ds-7hG" firstAttribute="leading" secondItem="I9l-Hu-B3H" secondAttribute="leading" id="K57-Hp-U96"/>
+                            <constraint firstItem="8h7-cz-kee" firstAttribute="centerX" secondItem="I9l-Hu-B3H" secondAttribute="centerX" id="Lvs-9Q-A64"/>
+                            <constraint firstAttribute="trailing" secondItem="GJk-Vb-2i3" secondAttribute="trailing" id="SZj-SL-vAO"/>
+                            <constraint firstAttribute="trailing" secondItem="Hev-ds-7hG" secondAttribute="trailing" id="Wqx-KW-GN0"/>
+                            <constraint firstAttribute="trailing" secondItem="8h7-cz-kee" secondAttribute="trailing" id="Wu9-y1-1yq"/>
+                            <constraint firstItem="GJk-Vb-2i3" firstAttribute="top" secondItem="Hev-ds-7hG" secondAttribute="bottom" constant="10" id="ZHB-Rg-00W"/>
+                            <constraint firstItem="8h7-cz-kee" firstAttribute="leading" secondItem="I9l-Hu-B3H" secondAttribute="leading" id="jOl-mr-nyw"/>
+                            <constraint firstItem="Hev-ds-7hG" firstAttribute="top" secondItem="8h7-cz-kee" secondAttribute="bottom" constant="10" id="oru-Bi-NMS"/>
+                            <constraint firstItem="Hev-ds-7hG" firstAttribute="top" secondItem="dGX-6b-aKy" secondAttribute="bottom" id="pxS-WP-hC8"/>
+                            <constraint firstItem="8h7-cz-kee" firstAttribute="centerY" secondItem="I9l-Hu-B3H" secondAttribute="centerY" id="uLJ-GM-Bgv"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="uLJ-GM-Bgv"/>
+                                <exclude reference="pxS-WP-hC8"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="Select date of complication" id="Sls-0m-eFo">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="QrK-DM-DKD"/>
+                        <barButtonItem key="rightBarButtonItem" title="Today" id="Rxr-ag-Re6">
+                            <connections>
+                                <action selector="toggleToToday:" destination="GaH-YH-eTw" id="ipx-ya-w7r"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="calendarView" destination="GJk-Vb-2i3" id="Jaw-yb-Zkc"/>
+                        <outlet property="menuView" destination="Hev-ds-7hG" id="v7e-JD-mul"/>
+                        <outlet property="month" destination="8h7-cz-kee" id="70b-PP-RlI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SnN-Z9-9eQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1604" y="1171"/>
+        </scene>
         <!--Select complication-->
         <scene sceneID="4Or-Go-3II">
             <objects>
@@ -309,6 +392,13 @@
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fN2-g3-S2m">
+                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <connections>
+                                                        <action selector="segue:" destination="Bp4-fb-yZU" eventType="touchUpInside" id="jiy-Rd-D5E"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" red="0.70980392156862748" green="0.17254901960784313" blue="0.41960784313725491" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
@@ -373,6 +463,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="qK1-AS-zBG" kind="show" identifier="calendar" id="S5r-ke-O0D"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e5x-5i-Ewu" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Mbm-Dq-6VC" userLabel="Exit" sceneMemberID="exit"/>
@@ -450,6 +543,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VPT-gd-OLj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="183" y="1171"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wbc-00-6ZC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qK1-AS-zBG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bGx-2r-j23">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="GaH-YH-eTw" kind="relationship" relationship="rootViewController" id="cgi-GE-wKL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hn0-vS-50B" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1604" y="409"/>
         </scene>
     </scenes>
 </document>
