--- a/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
+++ b/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
@@ -288,8 +288,34 @@
                                     <constraint firstAttribute="height" priority="750" constant="40" id="rxU-DX-4GU"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Month, Year" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8h7-cz-kee">
+                                <rect key="frame" x="0.0" y="74" width="600" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="A0V-Bu-kuM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0O6-Ly-7Zi">
+                                <rect key="frame" x="240" y="529" width="120" height="40"/>
+                                <color key="backgroundColor" red="0.29412782202361765" green="0.46483394947426204" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Hgh-bN-woa"/>
+                                    <constraint firstAttribute="height" constant="40" id="MCi-C3-7Aq"/>
+                                    <constraint firstAttribute="width" constant="120" id="ViC-f3-wAz"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="MCi-C3-7Aq"/>
+                                    </mask>
+                                </variation>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GJk-Vb-2i3" customClass="CVCalendarView" customModule="CVCalendar">
-                                <rect key="frame" x="0.0" y="164" width="600" height="336"/>
+                                <rect key="frame" x="0.0" y="164" width="600" height="335"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="340" id="w48-F1-hUe"/>
@@ -300,18 +326,10 @@
                                     </mask>
                                 </variation>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Month, Year" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8h7-cz-kee">
-                                <rect key="frame" x="0.0" y="74" width="600" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="A0V-Bu-kuM"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="rpO-du-g4k" firstAttribute="top" secondItem="0O6-Ly-7Zi" secondAttribute="bottom" priority="750" constant="31" id="042-m6-gb6"/>
                             <constraint firstItem="8h7-cz-kee" firstAttribute="top" secondItem="dGX-6b-aKy" secondAttribute="bottom" constant="10" id="7p6-NP-6pU"/>
                             <constraint firstItem="rpO-du-g4k" firstAttribute="top" secondItem="GJk-Vb-2i3" secondAttribute="bottom" priority="750" constant="100" id="AfE-UI-8sr"/>
                             <constraint firstItem="GJk-Vb-2i3" firstAttribute="leading" secondItem="I9l-Hu-B3H" secondAttribute="leading" id="G2g-0I-od2"/>
@@ -322,15 +340,18 @@
                             <constraint firstAttribute="trailing" secondItem="Hev-ds-7hG" secondAttribute="trailing" id="Wqx-KW-GN0"/>
                             <constraint firstAttribute="trailing" secondItem="8h7-cz-kee" secondAttribute="trailing" id="Wu9-y1-1yq"/>
                             <constraint firstItem="GJk-Vb-2i3" firstAttribute="top" secondItem="Hev-ds-7hG" secondAttribute="bottom" constant="10" id="ZHB-Rg-00W"/>
+                            <constraint firstItem="0O6-Ly-7Zi" firstAttribute="centerX" secondItem="I9l-Hu-B3H" secondAttribute="centerX" id="dAQ-XT-kiC"/>
                             <constraint firstItem="8h7-cz-kee" firstAttribute="leading" secondItem="I9l-Hu-B3H" secondAttribute="leading" id="jOl-mr-nyw"/>
                             <constraint firstItem="Hev-ds-7hG" firstAttribute="top" secondItem="8h7-cz-kee" secondAttribute="bottom" constant="10" id="oru-Bi-NMS"/>
                             <constraint firstItem="Hev-ds-7hG" firstAttribute="top" secondItem="dGX-6b-aKy" secondAttribute="bottom" id="pxS-WP-hC8"/>
+                            <constraint firstItem="0O6-Ly-7Zi" firstAttribute="top" secondItem="GJk-Vb-2i3" secondAttribute="bottom" constant="30" id="rLD-H8-hnu"/>
                             <constraint firstItem="8h7-cz-kee" firstAttribute="centerY" secondItem="I9l-Hu-B3H" secondAttribute="centerY" id="uLJ-GM-Bgv"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="uLJ-GM-Bgv"/>
                                 <exclude reference="pxS-WP-hC8"/>
+                                <exclude reference="AfE-UI-8sr"/>
                             </mask>
                         </variation>
                     </view>
