good prelim layout with stackview done. landscape mode is still buggy

--- a/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
+++ b/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
@@ -281,79 +281,89 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hev-ds-7hG" customClass="CVCalendarMenuView" customModule="CVCalendar">
-                                <rect key="frame" x="0.0" y="114" width="600" height="40"/>
-                                <color key="backgroundColor" white="0.98054584703947367" alpha="1" colorSpace="calibratedWhite"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="zMT-K1-KfK">
+                                <rect key="frame" x="0.0" y="74" width="600" height="496"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pmq-v6-WGp">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="446"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Month, Year" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8h7-cz-kee">
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="HXm-Mg-Y2m"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hev-ds-7hG" customClass="CVCalendarMenuView" customModule="CVCalendar">
+                                                <rect key="frame" x="0.0" y="40" width="600" height="40"/>
+                                                <color key="backgroundColor" white="0.98054584703947367" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="qv0-zP-tGH"/>
+                                                    <constraint firstAttribute="height" priority="750" constant="40" id="rxU-DX-4GU"/>
+                                                </constraints>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="rxU-DX-4GU"/>
+                                                    </mask>
+                                                </variation>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8lV-Xf-izC">
+                                                <rect key="frame" x="0.0" y="90" width="600" height="356"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GJk-Vb-2i3" customClass="CVCalendarView" customModule="CVCalendar">
+                                                        <rect key="frame" x="0.0" y="0.0" width="600" height="356"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstItem="GJk-Vb-2i3" firstAttribute="leading" secondItem="8lV-Xf-izC" secondAttribute="leading" id="AT6-AT-wvW"/>
+                                                    <constraint firstItem="GJk-Vb-2i3" firstAttribute="top" secondItem="8lV-Xf-izC" secondAttribute="top" id="Aho-fc-hI7"/>
+                                                    <constraint firstAttribute="bottom" secondItem="GJk-Vb-2i3" secondAttribute="bottom" priority="750" id="uni-jh-O4P"/>
+                                                    <constraint firstAttribute="trailing" secondItem="GJk-Vb-2i3" secondAttribute="trailing" id="v9a-7i-KfA"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="8h7-cz-kee" firstAttribute="leading" secondItem="pmq-v6-WGp" secondAttribute="leading" id="nPY-UX-vMJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="8h7-cz-kee" secondAttribute="trailing" id="zBv-OM-shb"/>
+                                        </constraints>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0O6-Ly-7Zi">
+                                        <rect key="frame" x="240" y="456" width="120" height="40"/>
+                                        <color key="backgroundColor" red="0.29412782202361765" green="0.46483394947426204" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="KJN-h4-5OI"/>
+                                            <constraint firstAttribute="height" constant="40" id="TuS-O3-zgE"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
+                                        <state key="normal" title="Next">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="20"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" priority="750" constant="40" id="rxU-DX-4GU"/>
+                                    <constraint firstItem="pmq-v6-WGp" firstAttribute="leading" secondItem="zMT-K1-KfK" secondAttribute="leading" id="UVY-Uz-pcw"/>
+                                    <constraint firstAttribute="trailing" secondItem="pmq-v6-WGp" secondAttribute="trailing" id="apa-8i-0ml"/>
+                                    <constraint firstItem="pmq-v6-WGp" firstAttribute="top" secondItem="zMT-K1-KfK" secondAttribute="top" id="lIa-NS-iv3"/>
                                 </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Month, Year" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8h7-cz-kee">
-                                <rect key="frame" x="0.0" y="74" width="600" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="A0V-Bu-kuM"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0O6-Ly-7Zi">
-                                <rect key="frame" x="240" y="529" width="120" height="40"/>
-                                <color key="backgroundColor" red="0.29412782202361765" green="0.46483394947426204" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Hgh-bN-woa"/>
-                                    <constraint firstAttribute="height" constant="40" id="MCi-C3-7Aq"/>
-                                    <constraint firstAttribute="width" constant="120" id="ViC-f3-wAz"/>
-                                </constraints>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="MCi-C3-7Aq"/>
-                                    </mask>
-                                </variation>
-                            </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GJk-Vb-2i3" customClass="CVCalendarView" customModule="CVCalendar">
-                                <rect key="frame" x="0.0" y="164" width="600" height="335"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="340" id="w48-F1-hUe"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="w48-F1-hUe"/>
-                                    </mask>
-                                </variation>
-                            </view>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="rpO-du-g4k" firstAttribute="top" secondItem="0O6-Ly-7Zi" secondAttribute="bottom" priority="750" constant="31" id="042-m6-gb6"/>
-                            <constraint firstItem="8h7-cz-kee" firstAttribute="top" secondItem="dGX-6b-aKy" secondAttribute="bottom" constant="10" id="7p6-NP-6pU"/>
-                            <constraint firstItem="rpO-du-g4k" firstAttribute="top" secondItem="GJk-Vb-2i3" secondAttribute="bottom" priority="750" constant="100" id="AfE-UI-8sr"/>
-                            <constraint firstItem="GJk-Vb-2i3" firstAttribute="leading" secondItem="I9l-Hu-B3H" secondAttribute="leading" id="G2g-0I-od2"/>
-                            <constraint firstItem="GJk-Vb-2i3" firstAttribute="centerX" secondItem="I9l-Hu-B3H" secondAttribute="centerX" id="HJS-Ye-P2A"/>
-                            <constraint firstItem="Hev-ds-7hG" firstAttribute="leading" secondItem="I9l-Hu-B3H" secondAttribute="leading" id="K57-Hp-U96"/>
-                            <constraint firstItem="8h7-cz-kee" firstAttribute="centerX" secondItem="I9l-Hu-B3H" secondAttribute="centerX" id="Lvs-9Q-A64"/>
-                            <constraint firstAttribute="trailing" secondItem="GJk-Vb-2i3" secondAttribute="trailing" id="SZj-SL-vAO"/>
-                            <constraint firstAttribute="trailing" secondItem="Hev-ds-7hG" secondAttribute="trailing" id="Wqx-KW-GN0"/>
-                            <constraint firstAttribute="trailing" secondItem="8h7-cz-kee" secondAttribute="trailing" id="Wu9-y1-1yq"/>
-                            <constraint firstItem="GJk-Vb-2i3" firstAttribute="top" secondItem="Hev-ds-7hG" secondAttribute="bottom" constant="10" id="ZHB-Rg-00W"/>
-                            <constraint firstItem="0O6-Ly-7Zi" firstAttribute="centerX" secondItem="I9l-Hu-B3H" secondAttribute="centerX" id="dAQ-XT-kiC"/>
-                            <constraint firstItem="8h7-cz-kee" firstAttribute="leading" secondItem="I9l-Hu-B3H" secondAttribute="leading" id="jOl-mr-nyw"/>
-                            <constraint firstItem="Hev-ds-7hG" firstAttribute="top" secondItem="8h7-cz-kee" secondAttribute="bottom" constant="10" id="oru-Bi-NMS"/>
-                            <constraint firstItem="Hev-ds-7hG" firstAttribute="top" secondItem="dGX-6b-aKy" secondAttribute="bottom" id="pxS-WP-hC8"/>
-                            <constraint firstItem="0O6-Ly-7Zi" firstAttribute="top" secondItem="GJk-Vb-2i3" secondAttribute="bottom" constant="30" id="rLD-H8-hnu"/>
-                            <constraint firstItem="8h7-cz-kee" firstAttribute="centerY" secondItem="I9l-Hu-B3H" secondAttribute="centerY" id="uLJ-GM-Bgv"/>
+                            <constraint firstItem="zMT-K1-KfK" firstAttribute="top" secondItem="dGX-6b-aKy" secondAttribute="bottom" constant="10" id="PHt-Vf-1y8"/>
+                            <constraint firstItem="zMT-K1-KfK" firstAttribute="leading" secondItem="I9l-Hu-B3H" secondAttribute="leading" id="RYQ-Px-GRF"/>
+                            <constraint firstItem="rpO-du-g4k" firstAttribute="top" secondItem="zMT-K1-KfK" secondAttribute="bottom" constant="30" id="azd-bX-yHG"/>
+                            <constraint firstItem="8h7-cz-kee" firstAttribute="centerX" secondItem="I9l-Hu-B3H" secondAttribute="centerX" id="gXS-2Q-PjV"/>
+                            <constraint firstAttribute="trailing" secondItem="zMT-K1-KfK" secondAttribute="trailing" id="uYP-k3-oxa"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="uLJ-GM-Bgv"/>
-                                <exclude reference="pxS-WP-hC8"/>
-                                <exclude reference="AfE-UI-8sr"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Select date of complication" id="Sls-0m-eFo">
                         <barButtonItem key="leftBarButtonItem" title="Back" id="QrK-DM-DKD"/>
@@ -582,6 +592,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hn0-vS-50B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1604" y="409"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="PPt-c1-SVA">
+            <objects>
+                <viewController id="oDS-7S-K2m" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Odt-CE-upg"/>
+                        <viewControllerLayoutGuide type="bottom" id="2cD-Tr-mRD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HHT-nE-UPz">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i0o-ae-xnw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2295" y="1171"/>
         </scene>
     </scenes>
 </document>
